--- a/projects/ml.html
+++ b/projects/ml.html
@@ -43,18 +43,23 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
-
+            <h2 style="color:#12d640">Sentiment Analysis of 2023 Nigerian Presidential Election Tweets Using PowerBI</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/rohit211-s/Sentiment-Analysis-of-2023-Nigerian-Presidential-Election-Tweets-Using-PowerBI" target="_blank">Project Link</a></li>
             </ul>
-
-            <p>
-              The web app created for showcasing machine learning and deep learning projects. The app consists of the flask as backend and bootstrap for the frontend part. The projects include text summarizer, image classifier and iris classifier.            
-            </p>
-          </div>
+            <ul>
+              <li><strong>Tools Used</strong>: <p style="display: inline; color:#12d640">Power BI, Power Query, Azure Cognitive Services (Text Analytics), Kaggle</p></li>
+            </ul>
+            <p style="text-align: justify;">
+              In this project, I explored the public sentiment surrounding the 2023 Nigerian Presidential Election by analyzing Twitter data to gauge the mood and opinions of Nigerians in the election's aftermath. Using Power BI and Azure Cognitive Services, I processed thousands of tweets to capture real-time reactions, categorize sentiments, and highlight key topics and terms central to this digital conversation.
+              <br></br>
+              The dataset, sourced from Kaggle, included rich details such as tweet content, user information, and tweet engagement, providing a comprehensive foundation for sentiment analysis. I cleaned and transformed the data in Power Query, structuring it to focus on meaningful insights. A custom sentiment score was then applied to each tweet, labeling sentiments as Positive, Neutral, or Negative to make the findings intuitive and actionable.
+              <br></br>
+              Through Power BI visualizations, the analysis revealed intriguing patterns: while Negative sentiments had a notable presence, Positive sentiments took a leading role in the overall sentiment landscape, showing a more favorable or hopeful perspective from the public. Key phrases like "INEC," "BVAS," and "Election" emerged as focal points in discussions, reflecting the issues that mattered most to users.
+              <br></br>
+              The project culminated in a detailed, visually engaging report that not only shed light on the sentiment trends of Nigerian Twitter users during this pivotal period but also underscored the dynamic, nuanced nature of online discourse. This analysis brings a neutral, data-driven lens to an emotionally charged topic, offering valuable insights into public sentiment trends within Nigeria's political sphere.
+              
+            </div>
 
         </div>
 
